# edf

./: .gitignore  CONSTITUTION.md  README.md  pyproject.toml
.claude/: CLAUDE.md
DOCS/: CLI.md  COOKBOOK.md  OVERVIEW.md  SDK.md  SPEC.md
DOCS/CLI/: README.md  info.md  validate.md  view.md
DOCS/SDK/: ContentFormat.md  EDF.md  GradeDistributions.md  README.md  Submission.md  ephemeral.md  exceptions.md
DOCS/SPEC/: README.md  additional-data.md  content-hash.md  manifest.md  submissions.md  task.md  validation.md
examples/: example.edf  generate_example.py
src/edf/: __init__.py  cli.py  core.py  exceptions.py  models.py  reader.py  validation.py  writer.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_exceptions.py  test_models.py  test_server.py  test_submission.py  test_validation.py
viewer/: __init__.py  server.py
viewer/static/: index.html  styles.css
