[project]
name = "edf"
version = "0.1.0"
description = "SDK and tools for the Edexia Data Format (.edf)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/10decikelvin/edf"
Repository = "https://github.com/10decikelvin/edf"
Documentation = "https://github.com/10decikelvin/edf/blob/main/DOCS/SPEC.md"

[project.scripts]
edf = "edf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edf", "viewer"]
