[project]
name = "edf"
version = "0.2.0"
description = "SDK and tools for the Edexia Data Format (.edf)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/10decikelvin/edf"
Repository = "https://github.com/10decikelvin/edf"
"SDK Reference" = "https://github.com/10decikelvin/edf/blob/main/DOCS/SDK.md"
"File Specification" = "https://github.com/10decikelvin/edf/blob/main/DOCS/SPEC.md"

[project.scripts]
edf = "edf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edf", "viewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=edf --cov=viewer --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/edf", "viewer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
